--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "setup:students": "ts-node --esm scripts/setupStudents.ts",
+    "sync:courses": "ts-node --esm syncCourses.ts",
+    "list:courses": "ts-node --esm seed.ts",
+    "sync:clients": "ts-node --esm syncClients.ts",
+    "list:clients": "ts-node --esm listClients.ts"
   },
   "dependencies": {
     "@google/genai": "^1.37.0",
     "@supabase/supabase-js": "^2.95.3",
+    "pg": "^8.11.5",
+    "dotenv": "^17.3.1",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
+    "@types/pg": "^8.10.11",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
