--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "setup:client": "ts-node --esm scripts/setupClient.ts",
     "setup:students": "ts-node --esm scripts/setupStudents.ts",
     "setup:forms": "ts-node --esm scripts/setupFormSubmissions.ts",
+    "list:students": "ts-node --esm scripts/listStudents.ts",
     "sync:courses": "ts-node --esm syncCourses.ts",
     "list:courses": "ts-node --esm seed.ts",
     "sync:clients": "ts-node --esm syncClients.ts",
